Fix tests on JDK 16